--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Cedarville+Cursive&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cedarville+Cursive&family=Dancing+Script:wght@400..700&display=swap');
 *{
     margin: 0;
     padding: 0;
@@ -93,7 +93,7 @@ body{
     font-weight: 900; 
 }
 .shape{
-    font-family: "Cedarville Cursive", cursive;
+    font-family: "Dancing Script", cursive;
 
 }
 
@@ -280,6 +280,66 @@ main{
 }
 
 /* change habit section ends here */
+
+/* Run extra mile is started here */
+.run-extra-mile-container{
+    width: 1060px;
+    height: 300px;
+    margin: 0 auto;
+    border-radius: 18px;
+    background: rgb(34, 34, 34);
+    display: flex;
+    justify-content: space-between;
+    margin-top: 50px;
+}
+
+.run-mile-content{
+    padding: 50px;
+}
+
+.run-mile-content h1{
+    color: rgb(255, 255, 255);
+    font-family: Inter;
+    font-size: 2rem;
+    font-weight: 900;
+    margin-bottom: 14px;
+}
+
+.run-mile-content p{
+    color: rgba(255, 255, 255, 0.5);
+    font-family: Inter;
+    font-size: 0.8rem;
+    font-weight: 400;
+    line-height: 24px;
+    margin-bottom: 20px;
+}
+
+.run-mile-content button{
+    border-radius: 42px;
+    background: rgb(230, 83, 60);
+    color: rgb(255, 255, 255);
+    font-family: Inter;
+    font-size: 1rem;
+    font-weight: 600;
+    padding: 10px 20px;
+    border: none;
+
+}
+
+.run-mile-image{
+   padding: 20px;
+    
+    
+}
+
+.run-mile-image img{
+    width: 100%;
+    height:100%;
+    object-fit: cover;
+    border-radius: 18px;
+    
+}
+/* Run extra mile is ends here */
 
 
 
