--- a/style.css
+++ b/style.css
@@ -289,8 +289,7 @@ body{
 
 /* Run extra mile is started here */
 .run-extra-mile-container{
-    width: 1060px;
-    height: 300px;
+    width: 80%;
     margin: 0 auto;
     border-radius: 18px;
     background: rgb(34, 34, 34);
@@ -378,8 +377,71 @@ body{
     background: rgb(34, 34, 34);
     height: 400px;
     border: 2px solid red;
-  
+    display: flex;
+    justify-content: space-between;
     
+}
+
+.table-section{
+    border: 2px solid red;
+    width: 50%;
+    padding-left: 10%;
+}
+.table-section h1{
+    color: rgb(255, 255, 255);
+    font-family: Inter;
+    font-size: 1.8rem;
+    font-weight: 900;
+    margin-bottom: 50px;
+    
+}
+table{
+    border-collapse: collapse;
+}
+ th, td{
+    border: 1px solid rgba(255, 255, 255, 0.1);
+    padding: 15px;
+    text-align: left;
+}
+
+
+table th{
+    color: rgb(255, 255, 255);
+    font-family: Inter;
+    font-size: 1rem;
+    font-weight: 500;
+}
+table td{
+    color: rgba(255, 255, 255, 0.5);
+    font-family: Inter;
+    font-size: 0.8rem;
+    font-weight: 400;
+}
+
+.calculate-bmi{
+    width: 50%;
+    padding-right: 10%;
+}
+
+.calculate-bmi h1{
+    color: rgb(255, 255, 255);
+    font-family: Inter;
+    font-size: 1.8rem;
+    font-weight: 900;
+    margin-bottom: 15px;
+}
+
+.calculate-bmi p{
+    color: rgba(255, 255, 255, 0.5);
+    font-family: Inter;
+    font-size: 0.8rem;
+    font-weight: 400;
+    margin-bottom: 30px;
+}
+
+{
+    border-radius: 8px;
+    background: rgba(255, 255, 255, 0.1);
 }
 /* BMI calculator design ends here */
 
@@ -527,6 +589,18 @@ body{
         
         
     }
+
+/* BMI calculator design responsive here */
+
+.bmi-calculator-content{
+   
+    margin-left: 5%;
+   
+}
+
+.bmi-calculator-content p{
+    width: 300px;
+}
 
    
 }
