--- a/style.css
+++ b/style.css
@@ -367,7 +367,7 @@ body{
 .bmi-calculator-content p{
     color: rgba(255, 255, 255, 0.5);
     font-family: Inter;
-    font-size: 0.8rem;
+    font-size: 1rem;
     font-weight: 400;
     line-height: 24px;
 }
@@ -376,16 +376,15 @@ body{
     width: 100%;
     background: rgb(34, 34, 34);
     height: 400px;
-    border: 2px solid red;
     display: flex;
     justify-content: space-between;
+    padding-top: 50px;
     
 }
 
 .table-section{
-    border: 2px solid red;
     width: 50%;
-    padding-left: 10%;
+    /* padding-left: 10%; */
 }
 .table-section h1{
     color: rgb(255, 255, 255);
@@ -400,7 +399,7 @@ table{
 }
  th, td{
     border: 1px solid rgba(255, 255, 255, 0.1);
-    padding: 15px;
+    padding: 15px 30px;
     text-align: left;
 }
 
@@ -420,7 +419,7 @@ table td{
 
 .calculate-bmi{
     width: 50%;
-    padding-right: 10%;
+    /* padding-right: 10%; */
 }
 
 .calculate-bmi h1{
@@ -433,15 +432,67 @@ table td{
 
 .calculate-bmi p{
     color: rgba(255, 255, 255, 0.5);
+    width: 577px;
     font-family: Inter;
-    font-size: 0.8rem;
+    font-size: 1rem;
     font-weight: 400;
     margin-bottom: 30px;
 }
 
-{
+form{
+    width: 577px;
+}
+
+input[type="text"] {
+    width: 250px;
+    color: rgba(255, 255, 255, 0.6) !important;
+    font-family: Inter;
+    font-size: 1rem;
+    font-weight: 400;
+    padding: 10px  15px;
     border-radius: 8px;
     background: rgba(255, 255, 255, 0.1);
+    border: none;
+    margin-right: 10px;
+}
+
+#sex{
+    width: 250px;
+    color: rgba(255, 255, 255, 0.6);
+    font-family: Inter;
+    font-size: 1rem;
+    font-weight: 400;
+    border-radius: 8px;
+    background: rgba(255, 255, 255, 0.1);
+    border: none;
+    padding: 10px 15px;
+}
+
+
+#Select-an-activity-factor{
+    width: 512px;
+    padding: 10px 15px;
+    color: rgba(255, 255, 255, 0.6);
+    font-family: Inter;
+    font-size: 1rem;
+    font-weight: 400;
+    border-radius: 8px;
+    background: rgba(255, 255, 255, 0.1);
+    border: none;
+    margin-bottom: 20px;
+
+}
+
+.calculator{
+    width: 200px;
+    padding: 10px 12px;
+    border: none;
+    border-radius: 42px;
+    background: rgb(230, 83, 60);
+    color: rgb(255, 255, 255);
+    font-family: Inter;
+    font-size: 1rem;
+    font-weight: 600;
 }
 /* BMI calculator design ends here */
 
@@ -593,14 +644,62 @@ table td{
 /* BMI calculator design responsive here */
 
 .bmi-calculator-content{
-   
     margin-left: 5%;
+    border: 2px solid red;
    
 }
 
 .bmi-calculator-content p{
-    width: 300px;
+    width: 350px;
+    border: 2px solid red;
 }
+
+.calculator-chart-and-calculator-bmi-container {
+    border: 2px solid red;
+    flex-direction: column;
+    height: auto; 
+    padding-top: 20px; 
+}
+
+.table-section, .calculate-bmi {
+    width: 100%;
+    padding-left: 5%;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    border: 2px solid red;
+}
+
+.table-section h1, .calculate-bmi h1 {
+    font-size: 1.5rem; 
+    margin-bottom: 20px; 
+    border: 2px solid red;
+}
+
+.calculate-bmi p{
+    font-size: 1rem;
+    width: 360px;
+    border: 2px solid red;
+}
+
+input[type="text"]{
+    width: 180px;
+    border: 2px solid red;
+    
+    
+}
+
+#sex{
+    width: 180px;
+    border: 2px solid red;
+    
+}
+
+#Select-an-activity-factor{
+    width: 378px;
+    border: 2px solid red;
+}
+
+
 
    
 }
