--- a/style.css
+++ b/style.css
@@ -300,6 +300,7 @@ body{
 
 .run-mile-content{
     padding: 50px;
+    width: 50%;
 }
 
 .run-mile-content h1{
@@ -333,6 +334,7 @@ body{
 
 .run-mile-image{
    padding: 20px;
+   width: 50%;
     
     
 }
@@ -384,7 +386,7 @@ body{
 
 .table-section{
     width: 50%;
-    /* padding-left: 10%; */
+    padding-left: 10%;
 }
 .table-section h1{
     color: rgb(255, 255, 255);
@@ -560,6 +562,19 @@ input[type="text"] {
     .banner-card-2 button {
         margin-left: 10px;
     }
+    .banner-button-1{
+       
+        font-size: 0.8rem;
+        padding: 8px 15px;
+        
+    }
+    .banner-button-2{
+       
+        font-size: 0.8rem;
+        padding: 8px 15px;
+        
+    }
+    
 
     /* responsive change habit section */
 
@@ -645,17 +660,15 @@ input[type="text"] {
 
 .bmi-calculator-content{
     margin-left: 5%;
-    border: 2px solid red;
    
 }
 
 .bmi-calculator-content p{
     width: 350px;
-    border: 2px solid red;
 }
 
 .calculator-chart-and-calculator-bmi-container {
-    border: 2px solid red;
+    
     flex-direction: column;
     height: auto; 
     padding-top: 20px; 
@@ -666,37 +679,37 @@ input[type="text"] {
     padding-left: 5%;
     padding-top: 20px;
     padding-bottom: 20px;
-    border: 2px solid red;
+    
 }
 
 .table-section h1, .calculate-bmi h1 {
     font-size: 1.5rem; 
     margin-bottom: 20px; 
-    border: 2px solid red;
+   
 }
 
 .calculate-bmi p{
     font-size: 1rem;
     width: 360px;
-    border: 2px solid red;
+    
 }
 
 input[type="text"]{
     width: 180px;
-    border: 2px solid red;
+    
     
     
 }
 
 #sex{
     width: 180px;
-    border: 2px solid red;
+    
     
 }
 
 #Select-an-activity-factor{
     width: 378px;
-    border: 2px solid red;
+    
 }
 
 
