--- a/style.css
+++ b/style.css
@@ -585,10 +585,68 @@ input[type="text"] {
 
 /* Extra section design is starts here */
 .additional-section-container{
-    
+    width: 80%;
+    margin: 0 auto;
+    margin-bottom: 50px;
+}
 
-    }
+.additional-section-content{
+    width: 50%;
+    margin: 0 auto;
+    text-align: center;
+    margin-bottom: 50px;
+}
+.additional-section-content h1{
+    color: rgb(255, 255, 255);
+    font-family: Inter;
+    font-size: 2.5rem;
+    font-weight: 900;
+    margin-bottom: 10px;
+}
+.additional-section-content p{
+    color: rgba(255, 255, 255, 0.5);
+    font-family: Inter;
+    font-size: 0.8rem;
+}
 
+.cards-image img{
+    width: 100%;
+    height: 250px;
+    object-fit: cover;
+}
+
+.card-description h2{
+    color: orangered;
+    font-size: 1.5rem;
+    font-weight: 900;
+    margin-bottom: 10px;
+    font-family: Inter;
+}
+.card-description p{
+    color: rgba(255, 255, 255, 0.5);
+    font-size: 0.8rem;
+    margin-bottom: 10px;
+    text-align: justify;
+    word-spacing: 2px;
+    font-family: Inter;
+}
+
+.card-description i{
+    color: orangered;
+    margin-bottom: 10px;
+}
+
+.card-description button{
+    border-radius: 42px;
+    background: rgb(230, 83, 60);
+    color: white;
+    font-family: Inter;
+    font-size: 1rem;
+    font-weight: 600;
+    box-sizing: border-box;
+    padding: 10px 20px;
+    border: none;
+}
     
 /* Extra section design is ends here */
 
@@ -869,6 +927,17 @@ input[type="text"]{
 
 .meet-team-image-container{
     grid-template-columns: 1fr;
+}
+
+/* extra section is started */
+
+.additional-section-content{
+    width: 80%;
+}
+
+.additional-section-content h1{
+    font-size: 2rem;
+    
 }
 
 /* footer section starts here */
